--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -1,33 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    android:id="@+id/nestedScrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/dark_slate_gray"
     tools:context="com.cs449.android.quickexpense2.LoginActivity">>
 
-    <TextView
-        android:id="@+id/login"
-        android:text="Login"
-        android:textSize="50sp"
-        style="@style/WelcomeScreen" />
+    <android.support.v7.widget.LinearLayoutCompat
 
-    <EditText
-        android:id="@+id/lUsername"
-        android:hint="Username"
-        style="@style/EditTextStyle" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/lPW"
-        android:hint="Password"
-        style="@style/EditTextStyle" />
+        <TextView
+            android:id="@+id/login"
+            android:text="Login"
+            android:textSize="50sp"
+            style="@style/WelcomeScreen" />
 
-    <Button
-        android:id="@+id/to_mainActivity"
-        style="@style/ButtonStyle"
-        android:text="Sign In"
-        android:onClick="goto_Main" />
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/textInputLayoutEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-</LinearLayout>
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/textInputEditTextEmail"
+                android:hint="Email"
+                style="@style/EditTextStyle" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/textInputLayoutPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/textInputEditTextPassword"
+                android:hint="Password"
+                style="@style/EditTextStyle" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/appCompatButtonLogin"
+            style="@style/ButtonStyle"
+            android:text="Sign In" />
+
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/textViewLinkRegister"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:gravity="center"
+            android:text="@string/text_not_member"
+            android:textSize="16dp" />
+
+    </android.support.v7.widget.LinearLayoutCompat>
+</android.support.v4.widget.NestedScrollView>
