--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,6 +53,7 @@
         <item name="android:padding">10dp</item>
         <item name="android:background">@drawable/edittext_border</item>
         <item name="android:textColorHint">@color/light_gray</item>
+        <item name="android:maxLines">1</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
