--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/dark_slate_gray"
-    tools:context="com.cs449.android.quickexpense2.LoginActivity">>
+    android:theme="@style/AppTheme.NoActionBar"
+    tools:context="com.cs449.android.quickexpense2.LoginActivity">
 
     <android.support.v7.widget.LinearLayoutCompat
 
