--- a/app/src/main/res/layout/register_screen.xml
+++ b/app/src/main/res/layout/register_screen.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/dark_slate_gray"
+    android:theme="@style/AppTheme.NoActionBar"
     tools:context="com.cs449.android.quickexpense2.RegisterActivity">
 
     <android.support.v7.widget.LinearLayoutCompat
